2008-06-22  Claude Paroz  <claude@2xlibre.net>

	* HACKING: Instructions on debugging.
	* gnome-modules.xml.in:
	* releases.xml.in: New module 'diary' in Extras.

2008-06-22  Gabor Kelemen  <kelemeng@gnome.hu>

	* releases.xml.in:
	* translation-teams.xml.in: Seems that yelp was branched to GNOME-2-22, not gnome-2-22.

2008-06-19  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Removed teams with no translations. Replaced by
	Wiki page: http://live.gnome.org/TranslationProject/TeamBrainstorm

2008-06-18  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gnome-modules.xml.in: Add empty lines module
	listings to make this file easier to edit.

2008-06-18  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* releases.xml.in: Add gnome-specimen to the
	gnome-extras release set. Thanks Claude Paroz for
	noticing this.

2008-06-18  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: Claude Paroz

	* releases.xml.in: Whitespace additions so it is more
	easily navigatable, e.g. using "paragraph movements" in
	Vim.

2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gnome-modules.xml.in: Fixup indentation and add a
	Vim modeline so it won't happen again...

2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gnome-modules.xml.in: Added gnome-specimen.

2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gnome-modules.xml.in: Small formatting change in comment
	to unbreak indentation based folding in e.g. Vim.

2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* people.xml.in: Add myself.

2008-06-16  Claude Paroz  <claude@2xlibre.net>

	* teams.py:
	* templates/team.tmpl: Allow to show language summary stats even when
	there isn't a team in charge of the language.

2008-06-16  Claude Paroz  <claude@2xlibre.net>

	* teams.py:
	* templates/language-release.tmpl: Allow to show language stats even when
	there isn't a team in charge of the language.

2008-06-16  Claude Paroz  <claude@2xlibre.net>
