@@ -768,7 +768,8 @@
   </module>
 
   <module id="gnome-build">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
 
   <module id="gnome-commander">
