@@ -673,7 +673,7 @@
       <module id="devhelp" branch="gnome-2-22"/>
       <module id="gdl"/>
       <module id="glade3" branch="gnome-2-22"/>
-      <module id="gnome-build"/>
+      <module id="gnome-build" branch="gnome-2-20"/>
       <module id="gnome-devel-docs"/>
     </category>
   </release>
