@@ -1,3 +1,9 @@
+2008-06-27  Johannes Schmid  <jhs@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	Updated gnome-build branch
+
 2008-06-22  Claude Paroz  <claude@2xlibre.net>
 
 	* HACKING: Instructions on debugging.
